--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -203,6 +203,10 @@ a {
   background-color: #eff0f1;
   border: 0; }
 
+  .comment{
+    margin-top: 20px;
+  }
+
 @media screen and (min-width: 64em) {
   .main-content {
     max-width: 64rem;
